k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-server
  namespace: simple-api-server-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-api-server
  template:
    metadata:
      labels:
        app: simple-api-server
    spec:
      containers:
        - name: simple-api-server
          image: 872489838303.dkr.ecr.ap-northeast-2.amazonaws.com/simple-api-server:latest
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 1
              memory: 512Mi
            requests:
              cpu: 500m
              memory: 256Mi
