k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-api-server
  namespace: simple-api-server-test
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  selector:
    app: simple-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
